<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
    </com.google.android.gms.ads.AdView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/adView"
        android:layout_gravity="center"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="70dp"
        android:background="#000000"
        android:gravity="center"
        android:text="@string/p_calculator"
        android:textColor="#FFE500"
        android:textSize="50sp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_marginHorizontal="15dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/enter_percent"
            android:textColor="#000000"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:autofillHints=""
            android:backgroundTint="#CD5BE1"
            android:ems="10"
            android:hint="@string/percent"
            android:inputType="number"
            android:textSize="18sp"
            tools:targetApi="lollipop" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll1"
        android:layout_marginHorizontal="15dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/enter_your_number"
            android:textColor="#000000"
            android:textSize="22sp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:autofillHints=""
            android:backgroundTint="#CD5BE1"
            android:ems="10"
            android:hint="@string/enter_number"
            android:inputType="number"
            android:textSize="18sp"
            android:visibility="gone" />

    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="60dp"
        android:background="#F6E65A"
        android:text="@string/calculate_the_result"
        android:visibility="gone" />

    <TextView
        android:id="@+id/results"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:background="#CD5BE1"
        android:gravity="center"
        android:text="@string/result"
        android:textColor="#000000"
        android:textSize="30sp"
        android:visibility="gone" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_menu"/>

    <fragment
        android:id="@+id/fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/navi"
        app:defaultNavHost="true"
        app:navGraph="@navigation/my_navi" />

</RelativeLayout>